--- a/abc327/Cargo.toml
+++ b/abc327/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "{{project-name}}"
+name = "abc327"
+authors = ["Tounyu <tounyu1992@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
 
